tests/dataset/tpc-ds/compiler/kotlin/q23.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q23.kt:51:12: error: redeclaration: Item
data class Item(var i_item_sk: Int)
           ^
/tmp/q23.kt:61:12: error: redeclaration: Item
data class Item(var i_item_sk: Int)
           ^
/tmp/q23.kt:148:13: error: type mismatch: inferred type is Double but Boolean was expected
        if (toDouble(toDouble((c as MutableMap<String, Any?>)["sales"]) > toDouble(0.95)) * toDouble(max_sales)) {
            ^
